<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">


    <View
        android:id="@+id/header_view"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@drawable/header_bg"
        tools:ignore="MissingConstraints">

    </View>


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Sign in"
        android:textColor="@color/textHanding"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.2" />


    <EditText
        android:id="@+id/name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:autofillHints=""
        android:background="@drawable/edit_text_bg"
        android:drawableStart="@drawable/ic_baseline_person"
        android:drawablePadding="10dp"
        android:elevation="10dp"
        android:hint="@string/name"
        android:inputType="text"
        android:padding="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintWidth_percent=".8" />

    <EditText
        android:id="@+id/password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:autofillHints=""
        android:background="@drawable/edit_text_bg"
        android:drawableStart="@drawable/ic_baseline_person"
        android:drawablePadding="10dp"
        android:elevation="3dp"
        android:hint="@string/password"
        android:inputType="numberPassword"
        android:padding="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name"
        app:layout_constraintWidth_percent=".8" />


    <Button
        android:id="@+id/sign_up"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:onClick="signIn"
        android:padding="15dp"
        android:text="Sign in"
        android:textAllCaps="false"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password"
        app:layout_constraintVertical_bias=".2"
        app:layout_constraintWidth_percent=".4" />

    <TextView
        android:id="@+id/textAcc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dontAcc"
        android:textSize="17sp"
        app:flow_horizontalBias=".3"
        app:flow_verticalBias="0.21"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/sign_up"
        app:layout_constraintStart_toStartOf="@+id/sign_up"
        app:layout_constraintTop_toBottomOf="@+id/sign_up" />

    <TextView
        android:id="@+id/sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="signUp"
        android:text="Sign up"
        android:textColor="@color/pink"
        android:textSize="19sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/textAcc"
        app:layout_constraintStart_toEndOf="@id/textAcc"
        app:layout_constraintTop_toTopOf="@+id/textAcc" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom">


        <View

            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:background="@drawable/bottom_bg" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>